[project]
name = "ghlang"
version = "2.4.6"
description = "Visualize your GitHub language stats, blazingly fast."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "MihaiStreames", email = "72852703+MihaiStreames@users.noreply.github.com" },
]
keywords = [
    "github",
    "statistics",
    "visualization",
    "code-analysis",
    "developer-tools",
    "charts",
    "programming-languages",
    "analytics",
    "cli",
    "metrics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.33.1",
    "matplotlib>=3.10.8",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "typer>=0.24.1",
    "rich>=14.3.3",
    "tomli>=2.4.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "types-requests>=2.33.0.20260327",
    "types-PyYAML>=6.0.12.20250915",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[project.scripts]
ghlang = "ghlang.cli:app"

[project.urls]
Homepage = "https://github.com/velox-sh/ghlang"
Repository = "https://github.com/velox-sh/ghlang"
Issues = "https://github.com/velox-sh/ghlang/issues"
Changelog = "https://github.com/velox-sh/ghlang/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ghlang"]

[tool.hatch.build.targets.sdist]
include = ["ghlang/**", "tests/**"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "W",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # bugbear
    "C4",   # comprehensions
    "SIM",  # simplify
    "ARG",  # unused arguments
    "PTH",  # use pathlib
    "RET",  # return
    "PL",   # pylint
    "PERF", # perflint
]

ignore = [
    "E501",    # line too long (formatter handles this)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "RET504",  # unnecessary assignment before return
    "SIM108",  # ternary operator (sometimes less readable)
    "B008",    # do not perform function calls in argument defaults (typer.Exit is fine)
    "B904",    # raise from in except (typer.Exit is fine)
    "PLC0415", # import not at top
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0915", # too many statements
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
lines-after-imports = 2
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 15
max-returns = 6
max-statements = 50

[tool.mypy]
python_executable = ".venv/bin/python"
python_version = "3.14"
files = ["ghlang", "tests"]
exclude = ["build", "dist"]

warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["ghlang"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["ghlang"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "pass",
]
