[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "ghlang"
version = "3.0.0-dev"
description = "Generate pretty language-stats charts for your GitHub profile or local codebase."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "MihaiStreames", email = "72852703+MihaiStreames@users.noreply.github.com" },
]
keywords = [
  "cli",
  "github",
  "language-stats",
  "svg",
  "github-action",
  "rust",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = []

[project.scripts]
ghlang = "ghlang._cli:main"

[project.urls]
Changelog = "https://github.com/MihaiStreames/ghlang/blob/master/CHANGELOG.md"
Homepage = "https://github.com/MihaiStreames/ghlang"
Issues = "https://github.com/MihaiStreames/ghlang/issues"
Repository = "https://github.com/MihaiStreames/ghlang"

[project.optional-dependencies]
dev = [
  "maturin>=1.11",
  "pytest>=9.0.3",
  "ruff>=0.15.12",
  "ssort>=0.16.0",
  "ty>=0.0.33",
]

[tool.maturin]
python-source = "python"
python-packages = ["ghlang"]
module-name = "ghlang._core"
strip = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
